--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
 
-  <script type="module" src="/build/kaier.esm.js"></script>
-  <script nomodule src="/build/kaier.js"></script>
+  <script type="module" src="/build/kaier-writer.esm.js"></script>
+  <script nomodule src="/build/kaier-writer.js"></script>
 
 </head>
 
